--- a/assets/css/style_sidebar.css
+++ b/assets/css/style_sidebar.css
@@ -11,14 +11,14 @@
 --------------------------------------------------------------*/
 /* :root {
 	scroll-behavior: smooth;
-}
+} */
 
 body {
 	font-family: "Open Sans", sans-serif;
 	background: #f6f9ff;
 	color: #444444;
 }
-
+/* 
 a {
 	color: #4154f1;
 	text-decoration: none;
@@ -88,7 +88,7 @@ h6 {
 }
 
 .card-title {
-	padding: 20px 0 15px 0;
+	/* padding: 20px 0 15px 0; */
 	font-size: 18px;
 	font-weight: 500;
 	color: #012970;
